[project]
name = "full_parallel_drug_repurposing_system"
version = "0.1.0"
description = "full_parallel_drug_repurposing_system using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.4.1",
    "pydantic",
    "ddgs",
    "streamlit",
    "plotly"
]

[project.scripts]
full_parallel_drug_repurposing_system = "full_parallel_drug_repurposing_system.main:run"
run_crew = "full_parallel_drug_repurposing_system.main:run"
train = "full_parallel_drug_repurposing_system.main:train"
replay = "full_parallel_drug_repurposing_system.main:replay"
test = "full_parallel_drug_repurposing_system.main:test"
run_with_trigger = "full_parallel_drug_repurposing_system.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
